--- a/liquidTests.cbp
+++ b/liquidTests.cbp
@@ -43,10 +43,12 @@
 			<Add option="-lsfml-window" />
 			<Add option="-lsfml-system" />
 		</Linker>
+		<Unit filename="include/HelloWorld.hpp" />
 		<Unit filename="include/Physics.hpp" />
 		<Unit filename="include/Shape.hpp" />
 		<Unit filename="include/ViewSFML.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/HelloWorld.cpp" />
 		<Unit filename="src/Physics.cpp" />
 		<Unit filename="src/Shape.cpp" />
 		<Unit filename="src/ViewSFML.cpp" />
