removed debug cout that caused segfault crash when no body was present in the world added a tests header to include all tests classes at once new file for a particules tests (FlowInto)

--- a/liquidTests.cbp
+++ b/liquidTests.cbp
@@ -43,15 +43,18 @@
 			<Add option="-lsfml-window" />
 			<Add option="-lsfml-system" />
 		</Linker>
+		<Unit filename="include/FlowInto.hpp" />
 		<Unit filename="include/HelloWorld.hpp" />
 		<Unit filename="include/Physics.hpp" />
 		<Unit filename="include/Shape.hpp" />
 		<Unit filename="include/ViewSFML.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/FlowInto.cpp" />
 		<Unit filename="src/HelloWorld.cpp" />
 		<Unit filename="src/Physics.cpp" />
 		<Unit filename="src/Shape.cpp" />
 		<Unit filename="src/ViewSFML.cpp" />
+		<Unit filename="tests.hpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
