--- a/liquidTests.cbp
+++ b/liquidTests.cbp
@@ -31,6 +31,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="extlibs/libs/Box2D/Release/libliquidfun.a" />
 				</Linker>
 			</Target>
 		</Build>
