--- a/liquidTests.cbp
+++ b/liquidTests.cbp
@@ -11,6 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-DDEBUG" />
@@ -45,6 +46,7 @@
 			<Add option="-lsfml-system" />
 		</Linker>
 		<Unit filename="include/FlowInto.hpp" />
+		<Unit filename="include/FpsCounter.hpp" />
 		<Unit filename="include/HelloWorld.hpp" />
 		<Unit filename="include/ParticleShape.hpp" />
 		<Unit filename="include/Physics.hpp" />
@@ -52,6 +54,7 @@
 		<Unit filename="include/ViewSFML.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/FlowInto.cpp" />
+		<Unit filename="src/FpsCounter.cpp" />
 		<Unit filename="src/HelloWorld.cpp" />
 		<Unit filename="src/ParticleShape.cpp" />
 		<Unit filename="src/Physics.cpp" />
